[package]
name = "solana-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
futures = "0.3"
bson = { version = "2", features = ["chrono-0_4"] } 
serde = "1.0"
serde_json = "1.0"
cron = "0.12.1"
chrono = "0.4" 
mongodb = "2.1"
once_cell = "1.10.0"
tokio = { version = "1.5", features = ["full"] }
tokio-stream = "0.1.15"
regex = "1"
solana-program = "1.18.12"
solana-transaction-status = "1.18.12"
spl-associated-token-account ="2.3.0"
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
solana-sdk = "1.8"
solana-client = "1.18.12"
solana-account-decoder = "1.18.12"
thiserror = "1.0.61"
spl-token = "4.0.0"
dotenv = "0.15.0"
